--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -140,7 +140,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1304,Y=880)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-A0QVJAQ
 LastExecutedLaunchName=DESKTOP-A0QVJAQ
 LastExecutedPIEPreviewDevice=
@@ -184,15 +184,18 @@ SnapScaleEnabled=False
 
 [EditorStartup]
 LastLevel=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
-LastLevel=/Game/Levels/Level1_LevelConstruction1_MiaTest
+LastLevel=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=PaperZDAnimationSourceEditor
+RecentAssetEditors=PaperZDAnimationSourceEditor
+RecentAssetEditors=PaperZDAnimBPEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Cascade
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -207,7 +210,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=PaperZDAnimBPEditor
-RecentAssetEditors=PaperZDAnimationSourceEditor
 RecentAssetEditors=PaperZDAnimBPEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -218,10 +220,10 @@ RecentAssetEditors=PaperZDAnimBPEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=FlipbookEditor
 RecentAssetEditors=SpriteEditor
-RecentAssetEditors=FlipbookEditor
-RecentAssetEditors=PaperZDAnimationSourceEditor
 OpenAssetsAtExit=/Game/Weapons/Projectiles/BP_ProjectileBase.BP_ProjectileBase
 OpenAssetsAtExit=/Game/Weapons/Projectiles/BP_ProjectileDarkEnergy.BP_ProjectileDarkEnergy
+OpenAssetsAtExit=/Game/Enemies/GoblinArcher/AS_GoblinArcher.AS_GoblinArcher
+OpenAssetsAtExit=/Game/Enemies/Chameleon/AS_Chameleon.AS_Chameleon
 None=======
 
 [ContentBrowser]
@@ -258,7 +260,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/Mia
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Mia
 None=======
 None=======
 ContentBrowserTab1.PluginFilters=
@@ -294,7 +296,7 @@ GlobalAssetPicker.ThumbnailSize=2
 GlobalAssetPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1897,6 +1899,20 @@ ParticleSystem.Delay=True
 ParticleSystem.Performance=True
 ParticleSystem.Occlusion=True
 ParticleSystem.Materials=True
+ABP_GoblinArcher_C.PaperZD=True
+BP_ProjectileBase_C.Default=True
+BP_HordeSpawn_C.TransformCommon=True
+BP_HordeSpawn_C.Default=True
+BP_HordeSpawn_C.Pawn=True
+BP_HordeSpawn_C.Camera=True
+BP_HordeSpawn_C.Replication=True
+BP_HordeSpawn_C.Rendering=True
+BP_HordeSpawn_C.Collision=True
+BP_HordeSpawn_C.HLOD=True
+BP_HordeSpawn_C.Input=True
+BP_HordeSpawn_C.Physics=True
+BP_HordeSpawn_C.Networking=True
+BP_HordeSpawn_C.Actor=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1912,7 +1928,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
-ScreenPosition=X=1247.500 Y=0.000
+ScreenPosition=X=1247.000 Y=0.000
 WindowSize=X=676.000 Y=396.000
 InitiallyMaximized=True
 
@@ -3003,8 +3019,8 @@ FMODStudioNiagara.TimeStamp=2024.05.05-21.12.44
 FMODStudioNiagara.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2024.05.20-21.12.22
 ExternalImagePicker.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2024.04.16-16.58.49
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.05.20-21.12.33
+SequencerWidgets.LastCompileMethod=External
 Cascade.TimeStamp=2024.04.16-16.58.05
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2024.04.16-16.58.16
@@ -3021,36 +3037,36 @@ MRUItem1=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
 MRUItem2=/Game/Levels/Level1_LevelConstruction
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/InfinityBladeEffects/Effects/FX_Skill_WeaponThrow/P_Skill_Throw_Ice_Charge_01
-MRUItem1=/Game/Weapons/Projectiles/BP_ProjectileDarkEnergy
-MRUItem2=/Game/Weapons/Projectiles/BP_ProjectileBase
-MRUItem3=/Game/Levels/Level1_LevelConstruction1_MiaTest
-MRUItem4=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
-MRUItem5=/Game/Character/BP_Pigeon
-MRUItem6=/Game/Enemies/Enemy_Basic/BP_EnemyBasicChar
-MRUItem7=/Game/Enemies/AI/BehaviourTrees/SubTrees/BT_SubTree_Stunned
-MRUItem8=/Game/Enemies/AI/BehaviourTrees/BT_EnemyRanged
-MRUItem9=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMudMonster
-MRUItem10=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMelee
-MRUItem11=/Game/Enemies/AI/BehaviourTrees/BT_EnemyChameleon
-MRUItem12=/Game/Enemies/AI/BehaviourTrees/BT_EnemyBeetleowlBug
-MRUItem13=/Game/Enemies/AI/Services/BTS_StopAttackingIfTargetIsDead
-MRUItem14=/Game/Enemies/AI/BehaviourTrees/BT_EnemyBasic
-MRUItem15=/Game/Enemies/AI/AIControllers/BP_AIC_EnemyBasic
-MRUItem16=/Game/Enemies/BeetleowlBug/ABP_BeetleowlBug
-MRUItem17=/Game/Enemies/Chameleon/AS_Chameleon
-MRUItem18=/Game/Enemies/Chameleon/ABP_Chameleon
-MRUItem19=/Game/Enemies/MudMonsterBO/BP_EnemyMudMonster
-MRUItem20=/Game/Enemies/GoblinArcher/BP_EnemyGoblinArcher
-MRUItem21=/Game/Enemies/Chameleon/BP_EnemyChameleon
-MRUItem22=/Game/Enemies/BeetleowlBug/BP_EnemyBeetleowlTrueChild
-MRUItem23=/Game/Enemies/Enemy_Ranged/BP_EnemyRanged
-MRUItem24=/Game/Enemies/Enemy_Ranged/ABP_EnemyRanged
-MRUItem25=/Game/Character/BP_Postman
-MRUItem26=/Game/Enemies/Chameleon/ChameleonAnimation/chameleonIdleF
-MRUItem27=/Game/Enemies/Chameleon/ChameleonAnimation/idle/chameleon_Sprite
-MRUItem28=/Game/Enemies/Chameleon/Sprites/MadChameleon1_Flipbook
-MRUItem29=/Game/Enemies/Enemy_Ranged/AS_EnemyRanged
+MRUItem0=/Game/Enemies/Chameleon/AS_Chameleon
+MRUItem1=/Game/Enemies/GoblinArcher/AS_GoblinArcher
+MRUItem2=/Game/Enemies/GoblinArcher/ABP_GoblinArcher
+MRUItem3=/Game/Weapons/Projectiles/BP_ProjectileDarkEnergy
+MRUItem4=/Game/Weapons/Projectiles/BP_ProjectileBase
+MRUItem5=/Game/InfinityBladeEffects/Effects/FX_Skill_WeaponThrow/P_Skill_Throw_Ice_Charge_01
+MRUItem6=/Game/Levels/Level1_LevelConstruction1_MiaTest
+MRUItem7=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
+MRUItem8=/Game/Character/BP_Pigeon
+MRUItem9=/Game/Enemies/Enemy_Basic/BP_EnemyBasicChar
+MRUItem10=/Game/Enemies/AI/BehaviourTrees/SubTrees/BT_SubTree_Stunned
+MRUItem11=/Game/Enemies/AI/BehaviourTrees/BT_EnemyRanged
+MRUItem12=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMudMonster
+MRUItem13=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMelee
+MRUItem14=/Game/Enemies/AI/BehaviourTrees/BT_EnemyChameleon
+MRUItem15=/Game/Enemies/AI/BehaviourTrees/BT_EnemyBeetleowlBug
+MRUItem16=/Game/Enemies/AI/Services/BTS_StopAttackingIfTargetIsDead
+MRUItem17=/Game/Enemies/AI/BehaviourTrees/BT_EnemyBasic
+MRUItem18=/Game/Enemies/AI/AIControllers/BP_AIC_EnemyBasic
+MRUItem19=/Game/Enemies/BeetleowlBug/ABP_BeetleowlBug
+MRUItem20=/Game/Enemies/Chameleon/ABP_Chameleon
+MRUItem21=/Game/Enemies/MudMonsterBO/BP_EnemyMudMonster
+MRUItem22=/Game/Enemies/GoblinArcher/BP_EnemyGoblinArcher
+MRUItem23=/Game/Enemies/Chameleon/BP_EnemyChameleon
+MRUItem24=/Game/Enemies/BeetleowlBug/BP_EnemyBeetleowlTrueChild
+MRUItem25=/Game/Enemies/Enemy_Ranged/BP_EnemyRanged
+MRUItem26=/Game/Enemies/Enemy_Ranged/ABP_EnemyRanged
+MRUItem27=/Game/Character/BP_Postman
+MRUItem28=/Game/Enemies/Chameleon/ChameleonAnimation/chameleonIdleF
+MRUItem29=/Game/Enemies/Chameleon/ChameleonAnimation/idle/chameleon_Sprite
 
 [DetailPropertyExpansion]
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3285,6 +3301,8 @@ BTS_StopAttackingIfTargetIsDead_C.Service=True
 /Game/InfinityBladeEffects/Effects/FX_Skill_WeaponThrow/P_Skill_Throw_Ice_Charge_01.P_Skill_Throw_Ice_Charge_01=0
 /Game/Weapons/Projectiles/BP_ProjectileBase.BP_ProjectileBase=0
 /Game/Weapons/Projectiles/BP_ProjectileDarkEnergy.BP_ProjectileDarkEnergy=0
+/Game/Enemies/GoblinArcher/ABP_GoblinArcher.ABP_GoblinArcher=1
+/Game/Enemies/GoblinArcher/AS_GoblinArcher.AS_GoblinArcher=0
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -3570,6 +3588,7 @@ GeneralProjectSettings=True
 FMODSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Mia/BP_HordeSpawn.BP_HordeSpawn;
 RecentlyPlaced=/Game/Weapons/Projectiles/BP_ProjectileBase.BP_ProjectileBase;
 RecentlyPlaced=/Game/Enemies/Enemy_Ranged/BP_EnemyRanged.BP_EnemyRanged;
 RecentlyPlaced=/Script/FMODStudio.FMODAmbientSound;/Engine/Transient.FMODAmbientSoundActorFactory_0
