Removed colour corrections

--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1993,7 +1993,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
 ScreenPosition=X=1246.400 Y=0.000
-WindowSize=X=680.800 Y=400.800
+WindowSize=X=682.400 Y=402.400
 InitiallyMaximized=True
 
 [Directories2]
@@ -3228,7 +3228,7 @@ ProjectileMovementComponent=Blueprint.Interfaces.Inherited Interfaces,Blueprint.
 BoxComponent=
 SceneComponent=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision
 PostProcessVolume=
-BrushComponent=
+BrushComponent=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.MaterialParameters=False
