--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,15 +190,15 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=PaperZDAnimationSourceEditor
 RecentAssetEditors=PaperZDAnimationSourceEditor
@@ -220,6 +220,10 @@ RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=PaperZDAnimBPEditor
 None=======
+OpenAssetsAtExit=/Game/Harx_Levels/UI/Pause.Pause
+OpenAssetsAtExit=/Game/Harx_Levels/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Harx_Levels/UI/Controls.Controls
+OpenAssetsAtExit=/Game/Harx_Levels/UI/ControlsPaused.ControlsPaused
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -255,7 +259,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/Mia
-ContentBrowserTab1.SelectedPaths=/Game/Harx_Levels/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Harx_Levels/UI
 None=======
 None=======
 ContentBrowserTab1.PluginFilters=
@@ -2080,7 +2084,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
 ScreenPosition=X=1246.400 Y=0.000
-WindowSize=X=698.400 Y=418.400
+WindowSize=X=700.000 Y=420.000
 InitiallyMaximized=True
 
 [Directories2]
@@ -2090,7 +2094,7 @@ None=======
 BRUSH=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBX=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBXAnim=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
-GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/HighresScreenshot00000.png
+GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/Claudia's Pause_screen/MainMenu_green_button.png
 GenericExport=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericOpen=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericSave=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
@@ -3190,15 +3194,15 @@ MRUItem3=/Game/Levels/Level1_LevelConstruction1_MiaTest
 MRUItem4=/Game/Levels/Level1_LevelConstruction
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
-MRUItem1=/Game/Harx_Levels/UI/UI_Blockout_1
-MRUItem2=/Game/Harx_Levels/UI/Pause
-MRUItem3=/Game/Harx_Levels/UI/MainMenu
-MRUItem4=/Game/Harx_Levels/UI/ControlsPaused
-MRUItem5=/Game/Harx_Levels/UI/Controls
-MRUItem6=/Game/Harx_Levels/UI/MainMenuLevel
-MRUItem7=/Game/Harx_Levels/UI/PigeonPostHUD
-MRUItem8=/Game/Assets/UI/Level-progress-tracker
+MRUItem0=/Game/Harx_Levels/UI/ControlsPaused
+MRUItem1=/Game/Harx_Levels/UI/Controls
+MRUItem2=/Game/Harx_Levels/UI/MainMenu
+MRUItem3=/Game/Harx_Levels/UI/Pause
+MRUItem4=/Game/Assets/UI/HUD/Level-progress-tracker
+MRUItem5=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
+MRUItem6=/Game/Harx_Levels/UI/UI_Blockout_1
+MRUItem7=/Game/Harx_Levels/UI/MainMenuLevel
+MRUItem8=/Game/Harx_Levels/UI/PigeonPostHUD
 MRUItem9=/Game/Assets/Graveyard/colormap
 MRUItem10=/Game/Enemies/Chameleon/AS_Chameleon
 MRUItem11=/Game/Enemies/GoblinArcher/AS_GoblinArcher
@@ -3247,9 +3251,9 @@ ActorComponent=
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperZDAnimSequence_Flipbook="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" "
 PaperZDAnimSequence="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" "
@@ -3272,7 +3276,7 @@ ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 FXSystemComponent="\"Object.Lighting.LightingChannels\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UI_Blockout_1_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
