--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -220,10 +220,6 @@ RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=PaperZDAnimBPEditor
 None=======
-OpenAssetsAtExit=/Game/Harx_Levels/UI/Pause.Pause
-OpenAssetsAtExit=/Game/Harx_Levels/UI/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/Harx_Levels/UI/Controls.Controls
-OpenAssetsAtExit=/Game/Harx_Levels/UI/ControlsPaused.ControlsPaused
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -259,7 +255,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/Mia
-ContentBrowserTab1.SelectedPaths=/Game/Harx_Levels/UI
+ContentBrowserTab1.SelectedPaths=/Game/Assets
 None=======
 None=======
 ContentBrowserTab1.PluginFilters=
@@ -2084,7 +2080,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
 ScreenPosition=X=1246.400 Y=0.000
-WindowSize=X=700.000 Y=420.000
+WindowSize=X=701.600 Y=421.600
 InitiallyMaximized=True
 
 [Directories2]
@@ -2094,7 +2090,7 @@ None=======
 BRUSH=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBX=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBXAnim=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
-GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/Claudia's Pause_screen/MainMenu_green_button.png
+GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/Bell-MT/Bell MT.ttf
 GenericExport=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericOpen=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericSave=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
