--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -194,6 +194,10 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
@@ -216,9 +220,6 @@ RecentAssetEditors=Behavior Tree
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Behavior Tree
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PaperZDAnimBPEditor
 None=======
 
 [ContentBrowser]
@@ -255,7 +256,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/Mia
-ContentBrowserTab1.SelectedPaths=/Game/Assets
+ContentBrowserTab1.SelectedPaths=/Game/Harx_Levels/UI
 None=======
 None=======
 ContentBrowserTab1.PluginFilters=
@@ -2064,6 +2065,31 @@ Widget.Performance=True
 Widget.Rendering=True
 Widget.Navigation=True
 Widget.Localization=True
+Texture2D.Interchange =True
+Pause_C.Appearance=True
+Pause_C.Input=True
+Pause_C.Interaction=True
+Pause_C.Designer=True
+Pause_C.Performance=True
+Pause_C.Layout=True
+Pause_C.Behavior=True
+Pause_C.Render Transform=True
+Pause_C.Localization=True
+Pause_C.Accessibility=True
+Pause_C.Rendering=True
+Pause_C.Navigation=True
+LevelCompleteVictory_C.Appearance=True
+LevelCompleteVictory_C.Input=True
+LevelCompleteVictory_C.Interaction=True
+LevelCompleteVictory_C.Performance=True
+LevelCompleteVictory_C.Layout=True
+LevelCompleteVictory_C.Behavior=True
+LevelCompleteVictory_C.Render Transform=True
+LevelCompleteVictory_C.Localization=True
+LevelCompleteVictory_C.Rendering=True
+LevelCompleteVictory_C.Navigation=True
+LevelCompleteVictory_C.Designer=True
+LevelCompleteVictory_C.Accessibility=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2079,8 +2105,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
-ScreenPosition=X=1246.400 Y=0.000
-WindowSize=X=701.600 Y=421.600
+ScreenPosition=X=46.400 Y=60.000
+WindowSize=X=1393.600 Y=423.200
 InitiallyMaximized=True
 
 [Directories2]
@@ -2090,7 +2116,7 @@ None=======
 BRUSH=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBX=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBXAnim=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
-GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/Bell-MT/Bell MT.ttf
+GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/keyboard.png
 GenericExport=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericOpen=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericSave=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
@@ -3192,64 +3218,65 @@ MRUItem4=/Game/Levels/Level1_LevelConstruction
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Harx_Levels/UI/ControlsPaused
 MRUItem1=/Game/Harx_Levels/UI/Controls
-MRUItem2=/Game/Harx_Levels/UI/MainMenu
-MRUItem3=/Game/Harx_Levels/UI/Pause
-MRUItem4=/Game/Assets/UI/HUD/Level-progress-tracker
-MRUItem5=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
-MRUItem6=/Game/Harx_Levels/UI/UI_Blockout_1
-MRUItem7=/Game/Harx_Levels/UI/MainMenuLevel
-MRUItem8=/Game/Harx_Levels/UI/PigeonPostHUD
-MRUItem9=/Game/Assets/Graveyard/colormap
-MRUItem10=/Game/Enemies/Chameleon/AS_Chameleon
-MRUItem11=/Game/Enemies/GoblinArcher/AS_GoblinArcher
-MRUItem12=/Game/Weapons/Projectiles/BP_ProjectileDarkEnergy
-MRUItem13=/Game/Weapons/Projectiles/BP_ProjectileBase
-MRUItem14=/Game/Enemies/GoblinArcher/ABP_GoblinArcher
-MRUItem15=/Game/InfinityBladeEffects/Effects/FX_Skill_WeaponThrow/P_Skill_Throw_Ice_Charge_01
-MRUItem16=/Game/Levels/Level1_LevelConstruction1_MiaTest
-MRUItem17=/Game/Character/BP_Pigeon
-MRUItem18=/Game/Enemies/Enemy_Basic/BP_EnemyBasicChar
-MRUItem19=/Game/Enemies/AI/BehaviourTrees/SubTrees/BT_SubTree_Stunned
-MRUItem20=/Game/Enemies/AI/BehaviourTrees/BT_EnemyRanged
-MRUItem21=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMudMonster
-MRUItem22=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMelee
-MRUItem23=/Game/Enemies/AI/BehaviourTrees/BT_EnemyChameleon
-MRUItem24=/Game/Enemies/AI/BehaviourTrees/BT_EnemyBeetleowlBug
-MRUItem25=/Game/Enemies/AI/Services/BTS_StopAttackingIfTargetIsDead
-MRUItem26=/Game/Enemies/AI/BehaviourTrees/BT_EnemyBasic
-MRUItem27=/Game/Enemies/AI/AIControllers/BP_AIC_EnemyBasic
-MRUItem28=/Game/Enemies/BeetleowlBug/ABP_BeetleowlBug
+MRUItem2=/Game/Harx_Levels/UI/LevelCompleteDefeat
+MRUItem3=/Game/Harx_Levels/UI/LevelCompleteVictory
+MRUItem4=/Game/Character/BP_Postman
+MRUItem5=/Game/Harx_Levels/UI/Pause
+MRUItem6=/Game/Harx_Levels/UI/MainMenu
+MRUItem7=/Game/Assets/UI/LevelComplete/BG_level_complete
+MRUItem8=/Game/Assets/UI/HUD/Level-progress-tracker
+MRUItem9=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
+MRUItem10=/Game/Harx_Levels/UI/UI_Blockout_1
+MRUItem11=/Game/Harx_Levels/UI/MainMenuLevel
+MRUItem12=/Game/Harx_Levels/UI/PigeonPostHUD
+MRUItem13=/Game/Assets/Graveyard/colormap
+MRUItem14=/Game/Enemies/Chameleon/AS_Chameleon
+MRUItem15=/Game/Enemies/GoblinArcher/AS_GoblinArcher
+MRUItem16=/Game/Weapons/Projectiles/BP_ProjectileDarkEnergy
+MRUItem17=/Game/Weapons/Projectiles/BP_ProjectileBase
+MRUItem18=/Game/Enemies/GoblinArcher/ABP_GoblinArcher
+MRUItem19=/Game/InfinityBladeEffects/Effects/FX_Skill_WeaponThrow/P_Skill_Throw_Ice_Charge_01
+MRUItem20=/Game/Levels/Level1_LevelConstruction1_MiaTest
+MRUItem21=/Game/Character/BP_Pigeon
+MRUItem22=/Game/Enemies/Enemy_Basic/BP_EnemyBasicChar
+MRUItem23=/Game/Enemies/AI/BehaviourTrees/SubTrees/BT_SubTree_Stunned
+MRUItem24=/Game/Enemies/AI/BehaviourTrees/BT_EnemyRanged
+MRUItem25=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMudMonster
+MRUItem26=/Game/Enemies/AI/BehaviourTrees/BT_EnemyMelee
+MRUItem27=/Game/Enemies/AI/BehaviourTrees/BT_EnemyChameleon
+MRUItem28=/Game/Enemies/AI/BehaviourTrees/BT_EnemyBeetleowlBug
+MRUItem29=/Game/Enemies/AI/Services/BTS_StopAttackingIfTargetIsDead
 
 [DetailPropertyExpansion]
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ProjectPackagingSettings="\"Object.Packaging.DirectoriesToAlwaysCook.DirectoriesToAlwaysCook[5]\" \"Object.Packaging.DirectoriesToAlwaysStageAsNonUFS.DirectoriesToAlwaysStageAsNonUFS[0]\" "
 BP_Postman_C="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Rendering.OverrideMaterials\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.PaperZD.AnimationComponent.Object.PaperZD.RenderComponentRef\" "
-PaperZDCharacter=
-PaperCharacter=
-Character=
-Pawn=
+PaperZDCharacter="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Rendering.OverrideMaterials\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.PaperZD.AnimationComponent.Object.PaperZD.RenderComponentRef\" "
+PaperCharacter="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Rendering.OverrideMaterials\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.PaperZD.AnimationComponent.Object.PaperZD.RenderComponentRef\" "
+Character="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Rendering.OverrideMaterials\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.PaperZD.AnimationComponent.Object.PaperZD.RenderComponentRef\" "
+Pawn="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Rendering.OverrideMaterials\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.PaperZD.AnimationComponent.Object.PaperZD.RenderComponentRef\" "
 BP_Pigeon_C=
 BP_Parcel_C=
 BP_CartMovement_240604_C="\"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 BP_CartMovement_C="\"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 ProgressBar=
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WidgetComponent="\"Object.Rendering.BackgroundColor\" \"Object.Rendering.TintColorAndOpacity\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperZDAnimSequence_Flipbook="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" "
 PaperZDAnimSequence="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" "
@@ -3272,13 +3299,15 @@ ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 FXSystemComponent="\"Object.Lighting.LightingChannels\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UI_Blockout_1_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Controls_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ControlsPaused_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Pause_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+LevelCompleteVictory_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3287,7 +3316,7 @@ bUseUnsortedMenus=False
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
 BP_EnemyBeetleowlTrueChild_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision
-PaperFlipbookComponent=BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
+PaperFlipbookComponent=
 EdGraph=BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces
 BP_Pigeon_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision
 BP_Parcel_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform
@@ -3476,6 +3505,10 @@ PostProcessVolume.Global Illumination=False
 /Game/Harx_Levels/UI/ControlsPaused.ControlsPaused=1
 /Game/Assets/Graveyard/colormap.colormap=1
 /Game/Harx_Levels/UI/PigeonPostHUD.PigeonPostHUD=1
+/Game/Harx_Levels/UI/Employee_Evaluation_screen.Employee_Evaluation_screen=1
+/Game/Harx_Levels/UI/LevelComplete.LevelComplete=1
+/Game/Harx_Levels/UI/LevelCompleteVictory.LevelCompleteVictory=1
+/Game/Harx_Levels/UI/LevelCompleteDefeat.LevelCompleteDefeat=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
