--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -184,7 +184,7 @@ SnapScaleEnabled=False
 
 [EditorStartup]
 LastLevel=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
-LastLevel=/Game/Harx_Levels/UI/MainMenuLevel
+LastLevel=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
 None=======
 
 [AssetEditorSubsystem]
@@ -194,9 +194,9 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -2102,6 +2102,18 @@ MainMenu_C.Rendering=True
 MainMenu_C.Navigation=True
 MainMenu_C.Designer=True
 MainMenu_C.Accessibility=True
+LevelCompleteDefeat_C.Appearance=True
+LevelCompleteDefeat_C.Input=True
+LevelCompleteDefeat_C.Interaction=True
+LevelCompleteDefeat_C.Designer=True
+LevelCompleteDefeat_C.Performance=True
+LevelCompleteDefeat_C.Layout=True
+LevelCompleteDefeat_C.Behavior=True
+LevelCompleteDefeat_C.Render Transform=True
+LevelCompleteDefeat_C.Localization=True
+LevelCompleteDefeat_C.Accessibility=True
+LevelCompleteDefeat_C.Rendering=True
+LevelCompleteDefeat_C.Navigation=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2118,7 +2130,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
 ScreenPosition=X=46.400 Y=60.000
-WindowSize=X=1395.200 Y=424.800
+WindowSize=X=1396.800 Y=426.400
 InitiallyMaximized=True
 
 [Directories2]
@@ -3229,12 +3241,12 @@ MRUItem4=/Game/Levels/Level1_LevelConstruction
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Harx_Levels/UI/Pause
-MRUItem1=/Game/Harx_Levels/UI/ControlsPaused
-MRUItem2=/Game/Harx_Levels/UI/Controls
-MRUItem3=/Game/Harx_Levels/UI/MainMenu
-MRUItem4=/Game/Harx_Levels/UI/MainMenuLevel
-MRUItem5=/Game/Harx_Levels/UI/LevelCompleteDefeat
-MRUItem6=/Game/Harx_Levels/UI/LevelCompleteVictory
+MRUItem1=/Game/Harx_Levels/UI/MainMenu
+MRUItem2=/Game/Harx_Levels/UI/LevelCompleteVictory
+MRUItem3=/Game/Harx_Levels/UI/LevelCompleteDefeat
+MRUItem4=/Game/Harx_Levels/UI/Controls
+MRUItem5=/Game/Harx_Levels/UI/ControlsPaused
+MRUItem6=/Game/Harx_Levels/UI/MainMenuLevel
 MRUItem7=/Game/Character/BP_Postman
 MRUItem8=/Game/Assets/UI/LevelComplete/BG_level_complete
 MRUItem9=/Game/Assets/UI/HUD/Level-progress-tracker
@@ -3264,7 +3276,7 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Object=
 ProjectPackagingSettings="\"Object.Packaging.DirectoriesToAlwaysCook.DirectoriesToAlwaysCook[5]\" \"Object.Packaging.DirectoriesToAlwaysStageAsNonUFS.DirectoriesToAlwaysStageAsNonUFS[0]\" "
 BP_Postman_C="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Rendering.OverrideMaterials\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.PaperZD.AnimationComponent.Object.PaperZD.RenderComponentRef\" "
 PaperZDCharacter="\"Object.Character.Sprite.Object.Sprite.SpriteColor\" \"Object.Character.Sprite.Object.Rendering.OverrideMaterials\" \"Object.Character.Sprite.Object.Lighting.LightingChannels\" \"Object.Character.Sprite.Object.Collision.BodyInstance\" \"Object.Character.Sprite.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.PaperZD.AnimationComponent.Object.PaperZD.RenderComponentRef\" "
@@ -3276,8 +3288,8 @@ BP_Parcel_C=
 BP_CartMovement_240604_C="\"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 BP_CartMovement_C="\"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 ProgressBar=
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget=
+Visual=
 WidgetComponent="\"Object.Rendering.BackgroundColor\" \"Object.Rendering.TintColorAndOpacity\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent=
 PrimitiveComponent=
@@ -3286,9 +3298,9 @@ ActorComponent=
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PaperZDAnimSequence_Flipbook="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" "
 PaperZDAnimSequence="\"Object.AnimSequence.AnimDataSource.AnimDataSource[0]\" "
@@ -3311,15 +3323,16 @@ ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 FXSystemComponent="\"Object.Lighting.LightingChannels\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UI_Blockout_1_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+UserWidget=
 Controls_C=
 ControlsPaused_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Pause_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-LevelCompleteVictory_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+LevelCompleteVictory_C=
+LevelCompleteDefeat_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -3368,6 +3381,7 @@ BrushComponent=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Im
 BP_Delivery_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup
 PlayerStart=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision
 Controls_C=Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,BP_Pigeon_C.Physics.ConstraintsGroup,BP_Parcel_C.TransformCommon.Transform,BP_EnemyBeetleowlTrueChild_C.Collision.Collision,BP_EnemyRanged_C.Physics.ConstraintsGroup,BP_EnemyRanged_C.Collision.Collision
+LevelCompleteVictory_C=
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.MaterialParameters=False
