Keyboard UI changed

--- a/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,6 +191,9 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -215,11 +218,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=
-RecentAssetEditors=PaperZDAnimationSourceEditor
 RecentAssetEditors=PaperZDAnimationSourceEditor
 None=======
 OpenAssetsAtExit=/Game/Mia/BP_CartMovement.BP_CartMovement
@@ -267,7 +267,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.SelectedPaths=/Game/Mia
-ContentBrowserTab1.SelectedPaths=/Game/Character
+ContentBrowserTab1.SelectedPaths=/Game/Harx_Levels/UI
 None=======
 None=======
 ContentBrowserTab1.PluginFilters=
@@ -2306,6 +2306,7 @@ BP_Grenade_C.Input=True
 BP_Grenade_C.Default=True
 BP_Grenade_C.WorldPartition=True
 BP_Grenade_C.Events=True
+Texture2D.Interchange =True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2321,8 +2322,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=38.000
-WindowSize=X=634.000 Y=427.000
+ScreenPosition=X=0.000 Y=37.600
+WindowSize=X=635.200 Y=428.800
 InitiallyMaximized=True
 
 [Directories2]
@@ -2332,7 +2333,7 @@ None=======
 BRUSH=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBX=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 FBXAnim=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
-GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/keyboard/keyboard.png
+GenericImport=../../../../../../Users/harki/Downloads/Game Stuff/keyboard.png
 GenericExport=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericOpen=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
 GenericSave=../../../../../../Users/SAM/Desktop/FantasticFour/PeasantPost/Content/
@@ -3434,43 +3435,43 @@ MRUItem5=/Game/Harx_Levels/Levels/Backup
 MRUItem6=/Game/Levels/Level1_LevelConstruction1_MiaTest
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Character/BP_Grenade
-MRUItem1=/Game/Mia/BP_HordeSpawn
-MRUItem2=/Game/Character/BP_AimingReticle
-MRUItem3=/Game/Mia/BP_Blockade
-MRUItem4=/Game/Mia/BP_Lanes
-MRUItem5=/Game/Character/BP_Parcel
-MRUItem6=/Game/Harx_Levels/UI/UI_Blockout_1
-MRUItem7=/Game/Harx_Levels/UI/PigeonPostHUD
-MRUItem8=/Game/Character/BP_Postman
-MRUItem9=/Game/Mia/BP_CartMovement
-MRUItem10=/Game/Mia/BP_Delivery
-MRUItem11=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
-MRUItem12=/Game/Levels/PrototypeLevel1_SamTest
-MRUItem13=/Game/Harx_Levels/UI/LevelCompleteVictory
-MRUItem14=/Game/Harx_Levels/UI/LevelCompleteDefeat
-MRUItem15=/Game/DamageSystem/BPC_DamageSystem
-MRUItem16=/Game/Harx_Levels/UI/MainMenuLevel
-MRUItem17=/Game/Levels/Level1_LevelConstruction
-MRUItem18=/Game/Harx_Levels/Levels/Blockouts/Level1Blockout
-MRUItem19=/Game/Character/ABP_Pigeon
-MRUItem20=/Game/Character/BP_Pigeon
-MRUItem21=/Game/Character/BP_Postman240718
-MRUItem22=/Game/Harx_Levels/UI/MainMenu
-MRUItem23=/Game/Harx_Levels/UI/Pause
-MRUItem24=/Game/Harx_Levels/UI/Controls
-MRUItem25=/Game/Harx_Levels/UI/ControlsPaused
-MRUItem26=/Game/Assets/UI/LevelComplete/BG_level_complete
-MRUItem27=/Game/Assets/UI/HUD/Level-progress-tracker
-MRUItem28=/Game/Assets/Graveyard/colormap
-MRUItem29=/Game/Enemies/Chameleon/AS_Chameleon
+MRUItem0=/Game/Harx_Levels/UI/Controls
+MRUItem1=/Game/Harx_Levels/UI/ControlsPaused
+MRUItem2=/Game/Assets/UI/keyboard
+MRUItem3=/Game/Character/BP_Grenade
+MRUItem4=/Game/Mia/BP_HordeSpawn
+MRUItem5=/Game/Character/BP_AimingReticle
+MRUItem6=/Game/Mia/BP_Blockade
+MRUItem7=/Game/Mia/BP_Lanes
+MRUItem8=/Game/Character/BP_Parcel
+MRUItem9=/Game/Harx_Levels/UI/UI_Blockout_1
+MRUItem10=/Game/Harx_Levels/UI/PigeonPostHUD
+MRUItem11=/Game/Character/BP_Postman
+MRUItem12=/Game/Mia/BP_CartMovement
+MRUItem13=/Game/Mia/BP_Delivery
+MRUItem14=/Game/Harx_Levels/Levels/NEWLEVELCONSTRUCTION
+MRUItem15=/Game/Levels/PrototypeLevel1_SamTest
+MRUItem16=/Game/Harx_Levels/UI/LevelCompleteVictory
+MRUItem17=/Game/Harx_Levels/UI/LevelCompleteDefeat
+MRUItem18=/Game/DamageSystem/BPC_DamageSystem
+MRUItem19=/Game/Harx_Levels/UI/MainMenuLevel
+MRUItem20=/Game/Levels/Level1_LevelConstruction
+MRUItem21=/Game/Harx_Levels/Levels/Blockouts/Level1Blockout
+MRUItem22=/Game/Character/ABP_Pigeon
+MRUItem23=/Game/Character/BP_Pigeon
+MRUItem24=/Game/Character/BP_Postman240718
+MRUItem25=/Game/Harx_Levels/UI/MainMenu
+MRUItem26=/Game/Harx_Levels/UI/Pause
+MRUItem27=/Game/Assets/UI/LevelComplete/BG_level_complete
+MRUItem28=/Game/Assets/UI/HUD/Level-progress-tracker
+MRUItem29=/Game/Assets/Graveyard/colormap
 
 [DetailPropertyExpansion]
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[0]\" "
-Object="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 ProjectPackagingSettings="\"Object.Packaging.DirectoriesToAlwaysCook.DirectoriesToAlwaysCook[5]\" \"Object.Packaging.DirectoriesToAlwaysStageAsNonUFS.DirectoriesToAlwaysStageAsNonUFS[0]\" "
 BP_Postman_C=
 PaperZDCharacter=
@@ -3754,6 +3755,7 @@ Image.Behavior=True
 /Game/Character/BP_AimingReticle.BP_AimingReticle=0
 /Game/Mia/BP_Blockade.BP_Blockade=0
 /Game/Character/BP_Grenade.BP_Grenade=0
+/Game/Assets/UI/keyboard.keyboard=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
