--- a/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/Engine.ini
@@ -126,3 +126,11 @@ Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 FlipNormalMapGreenChannel=False
 None=======
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
