--- a/PeasantPost/Saved/Config/WindowsEditor/Game.ini
+++ b/PeasantPost/Saved/Config/WindowsEditor/Game.ini
@@ -2,3 +2,6 @@
 bAddPacks=False
 None=======
 
+[/Script/DeveloperToolSettings.PlatformsMenuSettings]
+StagingDirectory=(Path="C:/Users/SAM/Desktop/pp build")
+
